# team_memory

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.development.yaml  config.minimal.yaml  config.production.yaml  config.test.yaml  config.yaml  doc-harness.project.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  server.json
.claude/rules/: harness.md  mcp-tools.md  team-memory.md
.cursor/: hooks.json  mcp.json
.cursor/agents/: code-reviewer.md  doc-admin-check.md  doc-admin-organize.md  engineering-autonomous-optimization-architect.md  flow-observer.md  plan-eval-architect.md  plan-eval-devops-expert.md  plan-eval-product-manager.md  plan-eval-qa-engineer.md  plan-eval-tech-lead.md  plan-eval-ux-designer.md  plan-evaluator.md  plan-implementer.md  project-manager-senior.md  spec-reviewer.md
.cursor/prompts/: doc-health-check-task.md  doc-organize-task.md  plan-eval-multi-agent-review.md  project-director-subagent-driven.md
.cursor/rules/: harness-engineering.mdc  harness-plan-execution.mdc  tm-core.mdc
.github/workflows/: ci.yml  weekly-memory-review.yml
.harness/: harness-config.yaml
.harness/docs/: harness-spec.md  migration-guide.md
.harness/failure/: failure-taxonomy.md
.harness/hooks/: post-edit-format.sh  pre-bash-guard.sh  stop-check.sh
.harness/orchestration/: context-management.md  task-flow.md
.harness/plans/: progress.md
.hermes/plans/: 2026-04-13_memory-janitor.md  2026-05-01_llm-wiki-phase1.md  2026-05-03_lightrag-phase2.md
agent_sync_cli/: README.md
agent_sync_cli/agent_sync/: adapters.py  cli.py  fetcher.py  installer.py  models.py  parser.py  registry.py
agent_sync_cli/tests/: test_cli.py  (+4 more)
agents/: manifest.yaml
backlog/: config.yml
docs/: EXTENDED.md  GETTING-STARTED.md  README.md  architecture.md  conventions.md  draft_refiner_fix_comparison.excalidraw  draft_refiner_fix_comparison.html  mcp-patterns.md  ops-runbook.md  security.md  testing.md  架构设计图.md
example/: cursor-mcp-team-memory.example.json  env.team-memory.example
extensions/: example_webhook_logger.py
migrations/: env.py
plans/: README.md  plan-phase0.md  plan-phase1.md  plan-phase2.md  plan-phase3.md  plan-phase4.md
prompts/: enrich.md  parse_group.md  parse_single.md  review.md  suggest_related.md  suggest_type.md  summary.md
scripts/: archive_docs_plans_to_tm.py  backup.sh  batch_create_experience_links.py  build_exec_plan_remediation_map.py  check_doc_harness_config.py  check_key_hash.py  debug_search_candidates.py  debug_search_pipeline.py  doc-gardening-whitelist.txt  fix_admin_key_hash.md  harness_doc_gardening.py  harness_import_check.py  harness_plan_structure_check.py  harness_ref_scan.sh  harness_ref_verify.sh  harness_tool_usage_baseline.sh  healthcheck.sh  inspect_experience_for_search.py  install_codified_knowledge.sh  lint_js_duplicates.py  list_experiences_for_mcp.py  merge_plans.py  migrate_embeddings.py  migrate_flat_to_parent_child.py  migrate_fts.py  migrate_fts_jieba.py  notify_plan_status.sh  plan-structure-whitelist.txt  post-commit-hook.sh  re_embed.py  remediate_tm_exec_plan_archives.py  rename_to_kebab.py  restore.sh  reword_editor.sh  run_mcp_with_dotenv.sh  smoke_archive_session.py  smoke_web_dashboard.py  sync_agent_artifacts.py  test_workflow_viewer.py
tests/: conftest.py  test_architecture.py  test_archive_models.py  test_archive_overview.py  test_archive_repository.py  test_archive_upload_paths.py  test_auth.py  test_bootstrap.py  test_cache.py  test_cli.py  test_cli_compat.py  test_config.py  test_context_trimmer.py  test_contradiction_detector.py  test_core_paths.py  test_daemon_app.py  test_daemon_config.py  test_daemon_pipeline.py  test_daemon_watcher.py  test_draft_tm_id.py  test_e2e.py  test_e2e_logging.py  test_embedding.py  test_embedding_dimension.py  test_embedding_text.py  test_evaluation.py  test_evaluation_was_used.py  test_experience_promoted.py  test_fts_tokenizer.py  test_generalization.py  test_git_utils.py  test_harness_doc_gardening.py  test_harness_import_check.py  test_hook_common.py  test_hook_convergence.py  test_hook_cursor_after_response.py  test_hook_cursor_before_prompt.py  test_hook_cursor_session_start.py  test_hook_draft_buffer.py  test_hook_draft_refiner.py  (+66 more)
tools/: commit_to_experience.py  pdf2md.py  publish_file_location_experiences.py
wiki/: contradictions.md
(+497 files in other folders)
