[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team_doc"
version = "0.1.0"
description = "Team experience database service based on MCP protocol"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
local-embedding = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "testcontainers[postgres]>=4.0.0",
]

[project.scripts]
team-doc = "team_doc.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/team_doc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
