[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team_memory"
version = "0.2.0"
description = "Team experience database service based on MCP protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ysydhc", email = "ysydhc@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "jieba>=0.42.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=5.0.0",
]
oauth = [
    "authlib>=1.0.0",
]
prometheus = [
    "prometheus-client>=0.19.0",
]
local-embedding = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pip-audit>=2.7.0",
    "testcontainers[postgres]>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ysydhc/team_memory"
Repository = "https://github.com/ysydhc/team_memory"
Issues = "https://github.com/ysydhc/team_memory/issues"

[project.scripts]
team-memory = "team_memory.server:main"
team-memory-web = "team_memory.web.app:main"
tm-cli = "team_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/team_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/team_memory/server.py" = ["E402"]
